--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://www.coolapk.com/link?url=https%3A%2F%2Fdownload.meizu.com%2FFirmware%2FFlyme%2F16th%2F9.21.5.14%2Fcn_daily%2F20210514002408%2F44cc7395%2Fupdate.zip
+  ROM_URL: https://down.ws59.cn/be1oyh9/5/g1/5g1cbe1oyh9?cdn_sign=1621300196-53-0-23bf3c9dad519662c6f74c3b5d3c5cc9&exp=9600&response-content-disposition=attachment%3B%20filename%3D%22f91_update.zip%22%3B%20filename%2A%3Dutf-8%27%27f91_update.zip
   ROM_NAME: Flyme
   TZ: Asia/Shanghai
 
@@ -45,8 +45,8 @@ jobs:
               mkdir ./output
               wget https://raw.githubusercontent.com/TimeMapleLing/actions_build_SGSI/main/bin/setup.sh -o setup-xiaoxin.sh
               sudo bash setup-xiaoxin.sh
-              sudo sed -i '7c AB=true' url2GSI.sh
-              sudo sed -i '8c Aonly=false' url2GSI.sh
+              sudo sed -i '7c AB=false' url2GSI.sh
+              sudo sed -i '8c Aonly=true' url2GSI.sh
        
        - name: Download Stock Rom & Generate GSI
          run: sudo ./ErfanGSIs/url2GSI.sh -c -b $ROM_URL $ROM_NAME
