--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://down.ws59.cn/be1oyh9/5/g1/5g1cbe1oyh9?cdn_sign=1621300196-53-0-23bf3c9dad519662c6f74c3b5d3c5cc9&exp=9600&response-content-disposition=attachment%3B%20filename%3D%22f91_update.zip%22%3B%20filename%2A%3Dutf-8%27%27f91_update.zip
+  ROM_URL: https://down.ws59.cn/be1oyh9/5/g1/5g1cbe1oyh9?cdn_sign=1621300196-53-0-23bf3c9dad519662c6f74c3b5d3c5cc9&exp=9600&response-content-disposition=attachment%3B%20filename%3D%22f91_update.zip
   ROM_NAME: Flyme
   TZ: Asia/Shanghai
 
